--- a/views/form.erb
+++ b/views/form.erb
@@ -3,10 +3,12 @@
 <form action="/" method="post" enctype="multipart/form-data">
 <%# <input type="hidden" name="_method" value="DELETE"> %>
   <div>
+    <label for="value1">タイトル：</label>
     <input type="text" name="title">
   </div>
 
   <div>
+    <label for="value1">内容：</label>
     <textarea name="contents" cols=50 rows=10></textarea>
   </div>
 
