一覧、詳細ページ作成

--- a/views/form.erb
+++ b/views/form.erb
@@ -1,7 +1,5 @@
-<h1>メモアプリ</h1>
-
 <form action="/" method="post" enctype="multipart/form-data">
-<%# <input type="hidden" name="_method" value="DELETE"> %>
+<%# <input type="hidden" name="_method" value="DELETE"> %>q
   <div>
     <label for="value1">タイトル：</label>
     <input type="text" name="title">
