一覧、詳細、編集、削除まで実装

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,8 @@
-<a href="http://localhost:4567/new">  追加  </a>
+<a href="http://localhost:4567/memos/new">  追加  </a>
 
 <%# メモのタイトルを全て表示する %>
 <% unless @notes.nil? %> <%# データが存在しているのか確認 %>
-  <% @notes.each_with_index do |note,index| %>
-    <p><a href="http://localhost:4567/<%= index+1 %>">•<%= note["title"] %></a></p>
+  <% @notes.each do |note| %>
+    <p><a href="http://localhost:4567/memos/<%= note['id'] %>">•<%= note["title"].empty? ? '[no_title]':note['title'] %></a></p>
   <% end %>
 <% end %> 
