--- a/views/form.erb
+++ b/views/form.erb
@@ -1,5 +1,4 @@
-<form action="/" method="post" enctype="multipart/form-data">
-<%# <input type="hidden" name="_method" value="DELETE"> %>q
+<form action="/memos" method="post" enctype="multipart/form-data">
   <div>
     <label for="value1">タイトル：</label>
     <input type="text" name="title">
