更新ファイル実装済み

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,6 +3,6 @@
 <%# メモのタイトルを全て表示する %>
 <% unless @notes.nil? %> <%# データが存在しているのか確認 %>
   <% @notes.each do |note| %>
-    <p><a href="http://localhost:4567/memos/<%= note['id'] %>">•<%= note["title"].empty? ? '[no_title]':note['title'] %></a></p>
+    <p><a href="http://localhost:4567/memos/<%= note['id'] %>">•<%= h(note["title"].empty? ? '[no_title]':note['title']) %></a></p>
   <% end %>
 <% end %> 
