--- a/views/edit_memo.erb
+++ b/views/edit_memo.erb
@@ -1,14 +1,14 @@
-<form  method="POST" action="/memos/<%= params[:id]%>">
-<%# <form  method="POST" action="/memos/:id"> %>
+<form class="form" action="/memos/<%= params[:id]%>" method="post" enctype="multipart/form-data">
 <input type="hidden" name="_method" value="patch">
-  <div>
-    <label for="value1">タイトル：</label>
-    <input type="text" name="title" value="<%= @edit_note['title']%>">
+  <div class="form-group">
+    <label for="value1">タイトル</label>
+    <input class="form-control" type="text" name="title" value="<%= @edit_note['title']%>">
   </div>
 
-  <div>
-    <label for="value1">内容：</label>
-    <textarea name="content" cols=50 rows=10><%= @edit_note['content']%></textarea>
+  <div class="form-group">
+    <label for="value1">内容</label>
+    <textarea class="form-control" name="content" cols=50 rows=10><%= @edit_note['content']%></textarea>
   </div>
-  <input type="submit" value="保存">
+
+  <input class="btn btn-primary" type="submit" value="保存">
 </form>
