--- a/views/show.erb
+++ b/views/show.erb
@@ -1,15 +1,15 @@
-<% @notes.each  do |note| %>
+<% @notes.each do |note| %>
   <% if params[:id] == "#{note['id']}" %>
-    <p> <%= h(note["title"]) %> </p>
-    <p style ="white-space: pre-wrap;" ><%= h(note["content"]) %> </p> 
+    <p class="font-weight-bold"><%= h(note["title"]) %></p>
+    <p class="text-break" style ="white-space: pre-wrap;"><%= h(note["content"]) %></p>
   <% end %>
-<% end %> 
+<% end %>
 
-<form method="get" action="/memos/<%= params[:id] %>/edit">
-  <input type="submit" value="更新">
+<form class="d-inline" method="get" action="/memos/<%= params[:id] %>/edit">
+  <button class="btn btn-primary" type="submit">更新</button>
 </form>
 
-<form method="post" action="/memos/<%= params[:id] %>">
+<form class="d-inline" method="post" action="/memos/<%= params[:id] %>">
   <input type="hidden" name="_method" value="delete">
-  <input type="submit" value="削除">
+  <button class="btn btn-danger" type="submit">削除</button>
 </form>
