ヘルパーメソッド修正、RuboCop修正済み

--- a/views/show.erb
+++ b/views/show.erb
@@ -1,7 +1,7 @@
-<% @notes.each do |note| %>
-  <% if params[:id] == "#{note['id']}" %>
-    <p class="font-weight-bold"><%= h(note["title"]) %></p>
-    <p class="text-break" style ="white-space: pre-wrap;"><%= h(note["content"]) %></p>
+<% @files.each do |file| %>
+  <% if params[:id] == "#{file['id']}" %>
+    <p class="font-weight-bold"><%= h(file["title"]) %></p>
+    <p class="text-break" style ="white-space: pre-wrap;"><%= h(file["content"]) %></p>
   <% end %>
 <% end %>
 
